added the layout of the site

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -11,15 +11,16 @@
 	<nav class="dashboard-navigation">
 		<ul class="nav-list">
 			<li>
-				<img src="../images/home.png" alt="home" >
+				<a href="#" class="menu-item-home" ></a>
 			</li>
 			<li>
-				<img src="../images/views.png" alt="views">
+				<a href="#" class="menu-item-views" ></a>
 			</li>
 			<li>
-				<img src="../images/settings.png" alt="home" >
+			     <a href="#" class="menu-item-settings" ></a>
 			</li>
 		</ul>
 	</nav>
+	
 </body>
 </html>
